--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "config": "^3.3.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.5.0",
+    "form-serialize": "^0.7.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.15",
     "request": "^2.88.2"
