--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
 		"react": "^16.13.1",
 		"react-bootstrap": "^1.0.1",
 		"react-dom": "^16.13.1",
+		"react-fontawesome": "^1.7.1",
 		"react-moment": "^0.9.7",
 		"react-redux": "^7.2.0",
 		"react-router": "^5.1.2",
